tests/snapshots/integration__integration_tests__list__locked_worktree.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpURntiJ/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
[1mBranch        [0m  [1mState                                              [0m  [1mPath            [0m  [1mCommit  [0m  [1mAge          [0m  [1mMessage[0m
[1m[35mmain          [0m                                                       [1m[35m./test-repo     [0m  [2mb834638e[0m  [2m10 months ago[0m  [2mInitial commit[0m
[2mlocked-feature[0m  [2m(matches main) (locked: Testing lock functionality)[0m  [2m./locked-feature[0m  [2mb834638e[0m  [2m10 months ago[0m  [2mInitial commit[0m

[2mShowing 2 worktrees[0m

----- stderr -----
